# NeuralNetworks

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cppcheck-supressions.txt  data.cpp  data.h  func.cpp  func.h  layer.cpp  layer.h  main.cpp  network.cpp  network.h  ui.cpp  ui.h  util.cpp  util.h
data/params/: 0.8525  0.9326  0.9336  0.9358
params/: 0.697  0.697.txt  0.717  0.717.txt  0.751  0.751.txt  0.767  0.767.txt  0.811  0.811.txt  0.823-40-50-40  0.897-35  0.911-40-50
